word wrap to prevent breakage from one long word

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -87,6 +87,7 @@ p.message a.from:hover {
 
 p.message {
 	position: relative;
+	word-wrap: break-word;
 }
 
 .timestamp {
